--- a/TechVJ/template/dl.html
+++ b/TechVJ/template/dl.html
@@ -2,8 +2,8 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <link rel="shortcut icon" href="https://i.ibb.co/qJyZWCv/20230629-081948-0000.png" type="image/x-icon">
-    <meta property="og:image" content="https://i.ibb.co/qJyZWCv/20230629-081948-0000.png" itemprop="thumbnailUrl">
+    <link rel="shortcut icon" href="https://i.ibb.co/Z6F9WZL9/1000489714.png" type="image/x-icon">
+    <meta property="og:image" content="https://i.ibb.co/Z6F9WZL9/1000489714.png" itemprop="thumbnailUrl">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>%s | Goflix</title>
@@ -38,7 +38,7 @@
                     </div>
                     <div class="d-flex ">
                         <!-- logo -->
-                        <img src="https://www.pinterest.com/i/3KrcGvTAM/" width="80" height="80" class="rounded" style="box-shadow: 3px 5px 11px black;" alt="">
+                        <img src="https://i.ibb.co/Z6F9WZL9/1000489714.png" width="80" height="80" class="rounded" style="box-shadow: 3px 5px 11px black;" alt="">
                         <div class="p-3">
                             <h4 class="offcanvas-title font-semibold wow animate__animated animate__fadeInLeft " id="offcanvasWithBothOptionsLabel" style="text-shadow: 3px 5px 11px black;" >Goflix</h4>
                             <p class="text-red-600 font-semibold wow animate__animated animate__fadeIn animate__delay-1s animate__infinite">Goflix Telegram</p>
@@ -284,4 +284,5 @@
 </html>
 
 <!--  Don't Remove Credit @VJ_Botz Subscribe YouTube Channel For Amazing Bot @Tech_VJ Ask Doubt on telegram @KingVJ01 -->
+
 
